Fix progress bar UI and control bar UI on Firefox

--- a/source/Components/ControlBar/ControlBar.scss
+++ b/source/Components/ControlBar/ControlBar.scss
@@ -254,6 +254,7 @@ $dotSize: 0.8125em;
       top: #{(($barHeight / 2) - $dotSize) / 2};
       right: #{($dotSize + ($barHeight / 2)) / -2};
       font-size: $dotSize;
+      line-height: 1em;
     }
   }
 
