--- a/source/Components/ControlBar/Progress/Progress.scss
+++ b/source/Components/ControlBar/Progress/Progress.scss
@@ -49,7 +49,7 @@ $progressTransition: cubic-bezier(0.4, 0, 1, 1);
         top: -($dotSize - $barHeightHover) / 2;
         right: -$dotSize/2;
         z-index: 1;
-        // line-height: 1em;
+        line-height: 1em;
         opacity: 0;
         transform: scale(0, 0.142857142857);
         transition: transform 0.1s $progressTransition, opacity 0.1s $progressTransition;
